# loongson_XMUACM

MNN-YOLOv3/: CMakeLists.txt
MNN-YOLOv3/src/: UltraFace.cpp  UltraFace.hpp  main.cpp  mobilefacenet.cpp  mobilefacenet.h  recognizer.h
app_cmd_sender/: CMakeLists.txt  interface.yaml  package.xml
app_cmd_sender/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
app_cmd_sender/install/app_cmd_sender/lib/app_cmd_sender/: app_cmd_sender
app_cmd_sender/install/app_cmd_sender/lib/pkgconfig/: app_cmd_sender.pc
app_cmd_sender/install/app_cmd_sender/share/app_cmd_sender/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
app_cmd_sender/install/app_cmd_sender/share/app_cmd_sender/cmake/: app_cmd_senderConfig.cmake
app_cmd_sender/launch/: app_cmd_sender.launch
app_cmd_sender/nodes/: app_cmd_sender.cpp
app_way_planner/: CMakeLists.txt  interface.yaml  package.xml
app_way_planner/include/: app_way_planner_core.h
app_way_planner/install/: local_setup.sh  setup.bash  setup.sh
app_way_planner/install/app_way_planner/lib/pkgconfig/: app_way_planner.pc
app_way_planner/install/app_way_planner/share/app_way_planner/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
app_way_planner/nodes/: app_way_planner.cpp  app_way_planner_core.cpp
vehicle_socket/: CMakeLists.txt
vehicle_socket/install/: local_setup.sh  setup.ps1  setup.sh
vehicle_socket/nodes/install/: local_setup.sh  setup.sh
vehicle_socket/nodes/vehicle_sender/: control.h  pid.h  vehicle_sender.cpp
(+11 files in other folders)
